my bookings container without warnings